--- a/style.css
+++ b/style.css
@@ -1,1 +1,27 @@
+header {
+    background-color: rgba(0, 0, 0, 0.685);
+    display: flex;
+    flex-direction: row-reverse;
+    border-radius: 15px;
+    top: 3px;
+    position: sticky;
+    z-index: 1000;
+}
 
+header a {
+    color: wheat;
+    text-decoration: none;
+    padding: 1.5%;
+    font-size: 15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+header a:hover {
+    transform: scale(1.2);
+    transition: 0.5s ease;
+    color: aqua;
+}
+
+p {
+    padding-top: 90%;
+}
