--- a/MAIN/style.css
+++ b/MAIN/style.css
@@ -3,6 +3,7 @@
 html {
   scroll-behavior: smooth;
 }
+
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -356,11 +357,25 @@ nav a.active {
   -webkit-text-fill-color: transparent;
 }
 
-.star-rating[data-rating="1"] { --rating: 1; }
-.star-rating[data-rating="2"] { --rating: 2; }
-.star-rating[data-rating="3"] { --rating: 3; }
-.star-rating[data-rating="4"] { --rating: 4; }
-.star-rating[data-rating="5"] { --rating: 5; }
+.star-rating[data-rating="1"] {
+  --rating: 1;
+}
+
+.star-rating[data-rating="2"] {
+  --rating: 2;
+}
+
+.star-rating[data-rating="3"] {
+  --rating: 3;
+}
+
+.star-rating[data-rating="4"] {
+  --rating: 4;
+}
+
+.star-rating[data-rating="5"] {
+  --rating: 5;
+}
 
 /* CONTACT SECTION */
 
@@ -429,6 +444,20 @@ nav a.active {
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
 
+/*footer?*/
+.footer {
+  padding: 3rem 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  border-top: 4px solid wheat;
+}
+
+.footer img {
+  width: 40px;
+}
+
 /* extra */
 
 .message {
@@ -439,10 +468,12 @@ nav a.active {
   color: #fa5353;
   text-decoration: underline;
 }
+
 .rev:active {
   color: #fa5353;
   text-decoration: underline;
 }
+
 .con:active {
   color: #fa5353;
   text-decoration: underline;
@@ -524,36 +555,46 @@ nav a.active {
     text-align: center;
   }
 
-  @media (max-width: 343px) {
-    .all {
-      display: none;
-    }
+  .review {
+    max-height: 150px;
+    overflow: scroll;
+    transition: none;
+  }
+}
 
-    body {
-      background-color: black;
-    }
+.review:hover {
+  transform: translateY(0px) scale(1);
+}
 
-    .message {
-      display: block;
-      width: 90%;
-      max-width: 320px;
-      margin: 30vh auto;
-      color: #fff;
-      background-color: #333;
-      border-radius: 12px;
-      padding: 1%;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(252, 251, 251, 0.479);
-    }
+/* SMALL DEVICES MESSAGE*/
+@media (max-width: 343px) {
+  .all {
+    display: none;
+  }
 
-    .message h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
+  body {
+    background-color: black;
+  }
 
-    .message p {
-      font-size: 1rem;
-    }
+  .message {
+    display: block;
+    width: 90%;
+    max-width: 320px;
+    margin: 30vh auto;
+    color: #fff;
+    background-color: #333;
+    border-radius: 12px;
+    padding: 1%;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(252, 251, 251, 0.479);
+  }
 
+  .message h1 {
+    font-size: 10vw;
+    margin-bottom: 0.5rem;
+  }
+
+  .message p {
+    font-size: 5vw;
   }
 }
