--- a/MAIN/style.css
+++ b/MAIN/style.css
@@ -66,7 +66,7 @@ header .header-container {
 .hbm .line {
   width: 25px;
   height: 3px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
 }
@@ -132,6 +132,12 @@ nav a.active {
   padding: 3%;
   margin: 2%;
   border-radius: 20px;
+  transition: 0.4s ease-in-out;
+}
+
+.box1:hover {
+  color: black;
+  transform: scale(1.05);
 }
 
 .buttonfororder {
@@ -352,7 +358,7 @@ nav a.active {
   border-radius: 14px;
   max-width: 420px;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-  transition: transform 0.3s, box-shadow 0.3s;
+  transition: 0.3s ease-in-out;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -360,7 +366,7 @@ nav a.active {
 }
 
 .review:hover {
-  transform: translateY(0px) scale(1);
+  transform: scale(1.05);
 }
 
 .review .name {
@@ -639,6 +645,11 @@ nav a.active {
     width: 90%;
   }
 
+  .box1:hover {
+    transform: none;
+    color: white;
+  }
+
   .close-btn {
     display: block;
     position: absolute;
@@ -666,6 +677,8 @@ nav a.active {
     max-height: 150px;
     overflow-y: auto;
     transition: none;
+    transform: none;
+
   }
 }
 
