--- a/MAIN/style.css
+++ b/MAIN/style.css
@@ -909,3 +909,36 @@ form select:focus {
     font-size: 5vw;
   }
 }
+
+@media (max-height: 450px) {
+  .all {
+    display: none;
+  }
+
+  body {
+    background-color: black;
+    background-image: none;
+  }
+
+  .message {
+    display: block;
+    width: 90%;
+    max-width: 320px;
+    margin: 30vh auto;
+    color: #fff;
+    background-color: #333;
+    border-radius: 12px;
+    padding: 1%;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(252, 251, 251, 0.479);
+  }
+
+  .message h1 {
+    font-size: 10vw;
+    margin-bottom: 0.5rem;
+  }
+
+  .message p {
+    font-size: 5vw;
+  }
+}
